# CDPR-Dataset

./: README.md  pyproject.toml
cdpr_dataset/: export_to_rlds.py  generate_cdpr_dataset.py  synthetic_tasks.py
cdpr_dataset/datasets/: cdpr_scene_catalog.yaml
cdpr_dataset/datasets/cdpr_synth/: action_stats_cdpr_synth.json  action_stats_libero_spatial_no_noops.json  meta_dataset.json
cdpr_dataset/datasets/cdpr_synth/npz/: desk_pick_and_hover_00000.npz  desk_push_left_00001.npz  living_room_table_pick_and_hover_00002.npz  living_room_table_push_left_00003.npz  short_coffee_table_pick_and_hover_00004.npz  short_coffee_table_push_left_00005.npz
cdpr_dataset/datasets/cdpr_synth/videos/desk__cookies_wrapper_pick_and_hover_2025-11-05_13-42-24/: summary.txt  trajectory_data.npz
cdpr_dataset/datasets/cdpr_synth/videos/desk__cookies_wrapper_pick_and_hover_2025-11-05_13-42-41/: summary.txt
cdpr_dataset/datasets/cdpr_synth/videos/desk_auto_wrapper_pick_and_hover/: summary.txt  (+1 more)
cdpr_dataset/wrappers/: cdpr_ee_override.xml  desk__cookies_wrapper.xml  desk__ketchup_wrapper.xml  desk__milk_wrapper.xml  desk__orange_juice_wrapper.xml  desk_auto_wrapper.xml  living_room_table_auto_wrapper.xml  living_room_table_zshift.xml  placed_0_cookies.xml  placed_0_ketchup.xml  placed_0_milk.xml  placed_0_orange_juice.xml  placed_1_cookies.xml  placed_1_milk.xml  placed_1_orange_juice.xml  placed_2_alphabet_soup.xml  placed_2_orange_juice.xml  short_coffee_table_auto_wrapper.xml  short_coffee_table_zshift.xml
scripts/: list_libero_objects.py  list_libero_scenes.py  make_dataset.sh
(+35 files in other folders)
